# axor-telemetry-server

./: .env.example  .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
app/: __init__.py  db.py  main.py  schemas.py  stats.py
grafana/dashboards/: axor.json
grafana/provisioning/dashboards/: provider.yml
grafana/provisioning/datasources/: postgres.yml
landing/: index.html
migrations/: 001_init.sql
tests/: test_ingest.py  test_stats.py
